Logo no longer clipped on the right side

--- a/less/header.less
+++ b/less/header.less
@@ -26,7 +26,7 @@
       }
       #logo {
         height: 40px;
-        width: 48px;
+        width: 49px;
         background-image: url("assets/logo/Personal_logo4_for_web.svg");
         background-size: cover;
         margin: 0;
@@ -53,7 +53,7 @@
   #buttonWrapper {
     flex: 0 1 15%;
     position: relative;
-    z-index: 2;
+    z-index: 99;
 
     #mobileButton {
       -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
@@ -96,7 +96,7 @@
       margin: 0;
       padding: 0;
       background: transparent;
-      z-index: 1;
+      z-index: 98;
 
       .menuItems {
         visibility: hidden;
@@ -201,7 +201,7 @@
       #gitHubIcon {
         background-image: url("assets/icons/GitHub-Mark-120px-plus.png");
       }
-      
+
       .outer-ring {
         fill: black;
       }
